--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <script src="script.js"></script>
+    <meta charset="UTF-8">
+    <title>Rock Paper Scissors</title>
+    <script src ="script.js" async></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel = "stylesheet" href= "https://fonts.googleapis.com/css?family=Gloria+Hallelujah">
 </head>
+<body>
+    <h1>Rock Paper Scissors</h1>
+    <div class="buttons">
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
+    </div>
+    <div class="text-line">
+        <p class="text" id="player-score">Player Score:</p>
+        <p class="text" id="comp-score">Computer Score:</p>
+    </div>
+    <div>
+        <p class="text" id="output"></p>
+    </div>
+</body>
+</html>
